apps/wordpress/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wordpress
  namespace: wordpress
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: wordpress
  ports:
    - name: http
      port: 80
      targetPort: 80
